@startuml
skinparam packageStyle rectangle

package presentation {
    class CLIController
}

package application_services {
    class CompanyService
    class NsdService
    class StatementFetchService
    class StatementParseService
}

package application_usecases {
    class SyncCompaniesUseCase
    class SyncNsdUseCase
    class FetchStatementsUseCase
    class ParseAndClassifyStatementsUseCase
}

package domain_ports {
    interface CompanyRepositoryPort
    interface CompanySourcePort
    interface NsdRepositoryPort
    interface NsdSourcePort
    interface StatementRepositoryPort
    interface StatementSourcePort
    interface StatementRowsRepositoryPort
}

package infrastructure_repositories {
    class SqlAlchemyCompanyRepository
    class SqlAlchemyNsdRepository
    class SqlAlchemyStatementRepository
    class SqlAlchemyStatementRowsRepository
}

package infrastructure_scrapers {
    class CompanyExchangeScraper
    class NsdScraper
    class RequestsStatementSourceAdapter
}

CLIController --> CompanyService
CLIController --> NsdService
CLIController --> StatementFetchService
CLIController --> StatementParseService

CompanyService --> SyncCompaniesUseCase
NsdService --> SyncNsdUseCase
StatementFetchService --> FetchStatementsUseCase
StatementParseService --> ParseAndClassifyStatementsUseCase

SyncCompaniesUseCase --> CompanySourcePort
SyncCompaniesUseCase --> CompanyRepositoryPort
SyncNsdUseCase --> NsdSourcePort
SyncNsdUseCase --> NsdRepositoryPort
FetchStatementsUseCase --> StatementSourcePort
FetchStatementsUseCase --> StatementRowsRepositoryPort
FetchStatementsUseCase --> StatementRepositoryPort
ParseAndClassifyStatementsUseCase --> StatementRepositoryPort

CompanySourcePort <|.. CompanyExchangeScraper
CompanyRepositoryPort <|.. SqlAlchemyCompanyRepository
NsdSourcePort <|.. NsdScraper
NsdRepositoryPort <|.. SqlAlchemyNsdRepository
StatementSourcePort <|.. RequestsStatementSourceAdapter
StatementRepositoryPort <|.. SqlAlchemyStatementRepository
StatementRowsRepositoryPort <|.. SqlAlchemyStatementRowsRepository
@enduml